Fix ugly black underspill in mobile results panel

--- a/src/targets/excelsior/styles/views/room-products.less
+++ b/src/targets/excelsior/styles/views/room-products.less
@@ -244,10 +244,9 @@ room-products {
 			}
 			&.is-highlighted, &.is-member-only, &.is-member-only-disabled {
         .viewport-mobile & {
-          box-shadow: 0 0 0 3px rgba(0,0,0,0.02);
+          box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.02);
           // Use !important because the main style uses it
           border: 1px solid #212020 !important;
-          border-right-color: #dedede !important;
           background: #fff;
         }
 				pricing-details {
@@ -586,6 +585,7 @@ room-products {
         // 1px stretch to fill parent border
         margin-top: -1px;
         margin-bottom: -1px;
+        margin-right: -1px;
         border-radius: 0 6px 6px 0;
         flex: 0 0 23px;
 
